RESOLVED FIXED 282113
[UnifiedPDF] mail.proton.me: Encrypted <object> PDF does not show "document is password protected" UI
https://bugs.webkit.org/show_bug.cgi?id=282113
Summary [UnifiedPDF] mail.proton.me: Encrypted <object> PDF does not show "document i...
Abrar Rahman Protyasha
Reported 2024-10-25 12:42:26 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-10-25 12:56:51 PDT
EWS
Comment 2 2024-11-01 05:00:09 PDT
Committed 286001@main (2528cea2fd90): <https://commits.webkit.org/286001@main> Reviewed commits have been landed. Closing PR #35735 and removing active labels.
EWS
Comment 3 2024-11-04 08:31:27 PST
Committed 283286.415@safari-7620-branch (6a083c4ef811): <https://commits.webkit.org/283286.415@safari-7620-branch> Reviewed commits have been landed. Closing PR #2184 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.